<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:background="@color/gray1"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.examplel.awesome_men.yuewen.CusViews.CircleImage
        android:id="@+id/usericon"
        android:layout_margin="16dp"
        android:layout_width="60dp"
        android:layout_height="60dp"/>


    <android.support.design.widget.TextInputEditText
        android:textSize="@dimen/smallTextSize"
        android:textColorHint="@color/gray5"
        android:textColor="@color/black"
        android:maxLength="10"
        android:background="#ffffff"
        android:gravity="center"
        android:id="@+id/edit_username"
        android:hint="@string/edit_login_hint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bigBarHeight"/>

    <android.support.design.widget.TextInputEditText
        android:textSize="@dimen/smallTextSize"
        android:textColor="@color/black"
        android:textColorHint="@color/gray5"
        android:maxLength="16"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:gravity="center"
        android:id="@+id/edit_password"
        android:hint="@string/edit_password_hint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bigBarHeight"/>

    <Button
        android:layout_margin="@dimen/activityPadding"
        android:id="@+id/login"
        android:textSize="16sp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/register"
        android:textColor="@color/black"
        android:text="@string/newuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>